  Reports 25687 and 26225.

* <java> ignored the append attribute, Bugzilla Report 26137.

* The gcj compiler adapter for <javac> failed if the destination
  directory didn't exist.  Bugzilla Report 25856.

* Ant now fails with a more useful message if a new process will be
  forked in a directory and that directory doesn't exist.

Other changes:
--------------
* Shipped XML parser is now Xerces-J 2.6.1

* License is now Apache Software License 2.0

* Translate task logs a debug message specifying the number of files
  that it processed.  Bugzilla Report 13938.

* Enable to choose the regexp implementation without system property.
  Bugzilla Report 15390.

* <nice> task lets you set the priority of the current thread; non-forking
  <java> code will inherit this priority in their main thread.

* <touch> has filelist support.

* <fixcrlf> has a new attribute - fixlast. Bugzilla Report 23262.

* <p4submit> has 2 new attributes, needsresolveproperty and changeproperty.
  Bugzilla Report 25711.

* add description attributes to macrodef attributes and elements.
  Bugzilla Report 24711.

* Extending ClearCase Tasks :
 - Added an extra option to 'failonerr' to each ClearCase task/command.
 - Extended the functionality of cccheckout. It can check (notco) to see if
  the desired element is already checked out to the current view. Thus it
   won't attempt to check it out again.
 - Added three new ClearCase commands: ccmkattr, ccmkdir, ccmkelem
  Bugzilla Report 26253.

* New condition <typefound> that can be used to probe for the declaration 
  and implementation of a task, type, preset, macro, scriptdef, whatever. 
  As it tests for the implementation, it can be used to check for optional
  tasks being available. 

* added nested text support to <macrodef>
  
* added initial support for Java 1.5.  Java 1.5 is now correctly
  detected by Ant and treated just like Java 1.4.  You can now specify
  source="1.5" in the <javac> task.

* created new task <cvsversion>
